kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: myapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: "nginx"
  rules:
  - host: web04.go4clouds.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp
            port: 
              number: 8080
  - host: lfs04.go4clouds.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp
            port: 
              number: 8080
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-world2
            port:
              number: 8080
  tls:
    - hosts:
      - web04.go4clouds.net
      - lfs04.go4clouds.net
      secretName: web-go4clouds-net-tls
